# IntuiMotion

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: gestures.yaml
intuimotion/: config.py  connection.py  dispatcher.py  gestures.py  main.py  pipeline.py
intuimotion/actions/: __init__.py  dry_run.py  macros.py  media.py  mouse.py  mpx_mouse.py  windows.py
tests/: fakes.py  test_config.py  test_dry_run.py  test_gestures.py  test_macros.py  test_mouse.py  test_mpx_mouse.py  test_pipeline.py  test_windows.py
